[package]
name = "struct2map-derive"
description = "Proc derive macro for structmap crate"

authors = ["ex0dus-0x <ex0dus@codemuch.tech>"]
license = "MIT"

version = "0.1.6"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0.24"
syn = { version = "1.0.58", features = ["full"] }
